--- a/index.html
+++ b/index.html
@@ -34,21 +34,31 @@
       <h1>{{today | date:'EEEE M/d/yyyy'}}</h1>
 
       <!-- Fixed time tasks. -->
-      <ul class="fixed-time" contenteditable="false">
+      <ul class="fixed-time">
         <li ng-class="task.finished && 'finished'" ng-repeat="task in tasks.fixedTime" toggle-editable>
-          <span class="content">
+
+          <!-- Display. -->
+          <span class="display-area">
             <label>
               <input type="checkbox" ng-model="task.finished" />
-              <span class="editable">
-                <strong>{{task.time}}</strong>
-                <span ng-bind-html="task.title"></span>
-              </span>
+              <strong>{{task.time}}</strong>
+              <!-- TODO: bind as a model as it updates -->
+              <span ng-bind-html="task.title"></span>
             </label>
+
+            <span class="menu">
+              [ <a href="#" class="make-editable" click="makeContentEditable()">Edit</a> |
+              <a href="#" class="add-new-task" click="addNewTask()">Add task</a> ]
+            </span>
           </span>
 
-          <span class="menu">
-            [ <a href="#" class="make-editable" click="makeContentEditable()">Edit</a> |
-            <a href="#" class="add-new-task" click="addNewTask()">Add task</a> ]
+          <!-- Edit. -->
+          <span class="editable-area">
+            <input type="checkbox" ng-model="task.finished" />
+            <span class="editable" contenteditable>
+              <strong>{{task.time}}</strong>
+              <span ng-bind-html="task.title"></span>
+            </span>
           </span>
         </li>
       </ul>
